--- a/solution/f#/Nir-Kata/Nir-Kata.fsproj
+++ b/solution/f#/Nir-Kata/Nir-Kata.fsproj
@@ -8,6 +8,9 @@
 
     <ItemGroup>
         <Compile Include="Primitive.Obsession\NIR.fs" />
+        <Compile Include="Parse.Dont.Validate\Common.fs" />
+        <Compile Include="Parse.Dont.Validate\Year.fs" />
+        <Compile Include="Parse.Dont.Validate\Month.fs" />
         <Compile Include="Parse.Dont.Validate\NIRDomain.fs" />
     </ItemGroup>
 
