--- a/solution/f#/Nir-Kata/Nir-Kata.fsproj
+++ b/solution/f#/Nir-Kata/Nir-Kata.fsproj
@@ -14,6 +14,7 @@
         <Compile Include="Parse.Dont.Validate\Month.fs" />
         <Compile Include="Parse.Dont.Validate\Department.fs" />
         <Compile Include="Parse.Dont.Validate\City.fs" />
+        <Compile Include="Parse.Dont.Validate\Key.fs" />
         <Compile Include="Parse.Dont.Validate\SerialNumber.fs" />
         <Compile Include="Parse.Dont.Validate\NIRDomain.fs" />
     </ItemGroup>
