--- a/solution/c#/Nir-Kata-Tests/Nir-Kata-Tests.csproj
+++ b/solution/c#/Nir-Kata-Tests/Nir-Kata-Tests.csproj
@@ -11,6 +11,8 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.8.0" />
+        <PackageReference Include="FluentAssertions.LanguageExt" Version="0.4.0" />
+        <PackageReference Include="FsCheck.Xunit" Version="2.16.5" />
         <PackageReference Include="LanguageExt.Core" Version="4.4.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="xunit" Version="2.4.2" />
